--- a/package.json
+++ b/package.json
@@ -8,25 +8,27 @@
   },
   "license": "MIT",
   "dependencies": {
-    "aurelia-bootstrapper": "^2.2.0",
     "aurelia-animator-css": "^1.0.4",
+    "aurelia-bootstrapper": "^2.2.0",
+    "aurelia-dialog": "^1.0.0-rc.2.0.0",
+    "aurelia-polyfills": "^1.3.0",
     "bluebird": "^3.5.1",
-    "aurelia-polyfills": "^1.3.0"
+    "bootstrap": "^4.1.2",
+    "jquery": "^3.3.1",
+    "mongodb-stitch-browser-sdk": "^4.0.9"
   },
   "peerDependencies": {},
   "devDependencies": {
+    "@types/jasmine": "^2.8.6",
     "aurelia-cli": "^0.33.0",
+    "aurelia-protractor-plugin": "^1.0.6",
     "aurelia-testing": "^1.0.0-beta.4.0.0",
     "aurelia-tools": "^2.0.0",
-    "gulp": "github:gulpjs/gulp#4.0",
-    "minimatch": "^3.0.4",
-    "through2": "^2.0.3",
-    "uglify-js": "^3.3.15",
-    "vinyl-fs": "^3.0.2",
-    "babel-eslint": "7.2.3",
-    "eslint": "3.19.0",
-    "babel-loader": "^7.1.4",
+    "aurelia-webpack-plugin": "^3.0.0-rc.1",
     "babel-core": "^6.26.0",
+    "babel-eslint": "7.2.3",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-istanbul": "^4.1.5",
     "babel-plugin-syntax-flow": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -36,46 +38,48 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "babel-register": "^6.26.0",
-    "babel-plugin-istanbul": "^4.1.5",
+    "copy-webpack-plugin": "^4.5.1",
+    "css-loader": "^0.28.11",
+    "del": "^3.0.0",
+    "eslint": "3.19.0",
+    "expose-loader": "^0.7.5",
+    "extract-text-webpack-plugin": "next",
+    "file-loader": "^1.1.11",
+    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-rename": "^1.2.2",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.0.6",
+    "istanbul-instrumenter-loader": "^3.0.0",
     "jasmine-core": "^3.1.0",
+    "jest-jasmine2": "^23.0.0-alpha.0",
+    "jest-matchers": "^20.0.3",
+    "json-loader": "^0.5.7",
     "karma": "^2.0.0",
+    "karma-babel-preprocessor": "^7.0.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "latest",
+    "karma-coverage-istanbul-reporter": "^1.4.2",
     "karma-jasmine": "^1.1.1",
     "karma-mocha-reporter": "latest",
     "karma-webpack": "latest",
-    "karma-coverage-istanbul-reporter": "^1.4.2",
-    "jest-jasmine2": "^23.0.0-alpha.0",
-    "jest-matchers": "^20.0.3",
-    "karma-babel-preprocessor": "^7.0.0",
-    "ts-node": "^5.0.1",
-    "aurelia-protractor-plugin": "^1.0.6",
-    "protractor": "^5.3.0",
-    "wait-on": "^2.1.0",
-    "@types/jasmine": "^2.8.6",
-    "sass-loader": "^6.0.7",
+    "minimatch": "^3.0.4",
     "node-sass": "^4.7.2",
-    "gulp-rename": "^1.2.2",
-    "html-webpack-plugin": "^3.0.6",
-    "copy-webpack-plugin": "^4.5.1",
-    "extract-text-webpack-plugin": "next",
-    "aurelia-webpack-plugin": "^3.0.0-rc.1",
-    "webpack": "^4.1.1",
-    "webpack-cli": "^2.0.12",
-    "webpack-dev-server": "^3.1.1",
-    "expose-loader": "^0.7.5",
-    "style-loader": "^0.20.3",
-    "url-loader": "^1.0.1",
-    "del": "^3.0.0",
-    "css-loader": "^0.28.11",
     "nps": "^5.8.2",
     "nps-utils": "^1.5.0",
-    "file-loader": "^1.1.11",
-    "json-loader": "^0.5.7",
-    "html-loader": "^0.5.5",
-    "istanbul-instrumenter-loader": "^3.0.0",
     "opn": "^5.3.0",
-    "webpack-bundle-analyzer": "latest"
+    "protractor": "^5.3.0",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.3",
+    "through2": "^2.0.3",
+    "ts-node": "^5.0.1",
+    "uglify-js": "^3.3.15",
+    "url-loader": "^1.0.1",
+    "vinyl-fs": "^3.0.2",
+    "wait-on": "^2.1.0",
+    "webpack": "^4.1.1",
+    "webpack-bundle-analyzer": "latest",
+    "webpack-cli": "^2.0.12",
+    "webpack-dev-server": "^3.1.1"
   },
   "engines": {
     "node": ">= 6.0.0"
