--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bluebird": "^3.5.1",
     "bootstrap": "^4.1.2",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.10",
     "mongodb-stitch-browser-sdk": "^4.0.9"
   },
   "peerDependencies": {},
