--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "bootstrap": "^4.1.2",
     "jquery": "^3.3.1",
     "lodash": "^4.17.10",
+    "markdown-loader": "^3.0.0",
+    "marked": "^0.4.0",
     "mongodb-stitch-browser-sdk": "^4.0.9"
   },
   "peerDependencies": {},
@@ -88,7 +90,7 @@
   "scripts": {
     "start": "nps",
     "test": "nps test",
-    "deploy" : "./node_modules/aurelia-cli/bin/aurelia-cli.js build --env prod && cp config/CNAME dist/CNAME && git checkout -B gh-pages && git add -f dist static/* && git stash && git stash apply&& git commit -am 'Rebuild' && git filter-branch -f --prune-empty --subdirectory-filter dist && git push -f origin gh-pages && git checkout -"
+    "deploy": "./node_modules/aurelia-cli/bin/aurelia-cli.js build --env prod && cp config/CNAME dist/CNAME && git checkout -B gh-pages && git add -f dist static/* && git stash && git stash apply&& git commit -am 'Rebuild' && git filter-branch -f --prune-empty --subdirectory-filter dist && git push -f origin gh-pages && git checkout -"
   },
   "main": "dist/app.bundle.js"
 }
